--- a/src/App.css
+++ b/src/App.css
@@ -137,3 +137,18 @@
 }
 
 
+/* Projlog*/
+
+p{
+  font-size: 20px;
+
+}
+li{
+  font-size: 20px;
+  padding: 9px;
+}
+.projlog{
+  background-color: darkgray;
+  height: 40px;
+}
+
